HanoiTower Peg class